--- a/eureka-client/src/main/resources/bootstrap.yml
+++ b/eureka-client/src/main/resources/bootstrap.yml
@@ -3,9 +3,9 @@ spring:
     name: eureka-client
 
 server:
-  port: 8762
+  port: 8763
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.153.156:8761/eureka/
