--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,12 +1,27 @@
+# 构建高可用Eureka Server集群
+spring:
+  profiles: eureka01
 server:
   port: 8761
-
 eureka:
   instance:
-    hostname: localhost
+    hostname: 192.168.153.156
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://192.168.153.157:8762/eureka/
 
+---
+spring:
+  profiles: eureka02
+server:
+  port: 8762
+eureka:
+  instance:
+    hostname: 192.168.153.157
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://192.168.153.156:8761/eureka/
