--- a/eureka-client/src/main/resources/bootstrap.yml
+++ b/eureka-client/src/main/resources/bootstrap.yml
@@ -1,10 +1,21 @@
 spring:
   application:
     name: eureka-client
-
+---
+spring:
+  profiles: eurekaClient01
 server:
   port: 8763
+eureka:
+  client:
+    service-url:
+      defaultZone: http://192.168.153.156:8761/eureka/
 
+---
+spring:
+  profiles: eurekaClient02
+server:
+  port: 8784
 eureka:
   client:
     service-url:
