--- a/eureka-turbine/pom.xml
+++ b/eureka-turbine/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-turbine</artifactId>
+    <artifactId>eureka-turbine</artifactId>
 
     <dependencies>
         <dependency>
@@ -36,7 +36,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>online.shenjian.eureka.turbine.ServiceTurbineApplication</mainClass>
+                    <mainClass>online.shenjian.eureka.turbine.EurekaTurbineApplication</mainClass>
                 </configuration>
 
                 <executions>
