--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <module>eureka-client</module>
         <module>eureka-ribbon-client</module>
         <module>eureka-feign-client</module>
-        <module>service-turbine</module>
+        <module>eureka-turbine</module>
+        <module>eureka-zuul-client</module>
     </modules>
 
     <parent>
