新增Spring Cloud Config

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>eureka-feign-client</module>
         <module>eureka-turbine</module>
         <module>eureka-zuul-client</module>
+        <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
     <parent>
